<resources>
    <string name="status">Status</string>
    <string name="app_name">Samoola</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="haveproblem">Have a Problem? Samoola is at your service</string>
    <string name="registerationphonenumber">Enter PhoneNumber For Registeration</string>
    <string name="enter">Enter</string>
    <string name="acceptcondition">To continue creating the account, you must agree to</string>
    <string name="thetermsandconditions"><u>The Terms and Conditions</u>.</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="entertheverificationcode">Enter the verification code</string>
    <string name="verifythecode">Verify the code</string>
    <string name="sendagainwithinseconds">Send again within</string>
    <string name="verificationcode">Verification Code</string>
    <string name="hello">Hello ! Choose your Area</string>
    <string name="area">Area</string>
    <string name="follow">Follow</string>
    <string name="chooseurareforbetterservice">Choose your Area For better service</string>
    <string name="sal7ha">Samoola</string>
    <string name="mainpage">Main Page</string>
    <string name="profile">Profile</string>
    <string name="offers">Offers</string>
    <string name="requests">Requests</string>
    <string name="helpandsupport">Help and Support</string>
    <string name="aboutapp">About Samoola</string>
    <string name="setting">Change Language</string>
    <string name="internetconnection">No Internet Connection</string>
    <string name="points">Points Redeem</string>
    <string name="credit">Points Value</string>
    <string name="logout">Log out</string>
    <string name="login">Log in</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="email_txt">Send Email</string>
    <string name="savechanges">Save Setting</string>
    <string name="rating">Rate</string>
    <string name="password">Password</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="bdate">Address</string>
    <string name="register">Regist</string>
    <string name="aboutsal7ha">About Samoola</string>
    <string name="useageway">Usage Way</string>
    <string name="policy">Policy</string>
    <string name="shareopinion">Share your review!</string>
    <string name="welcometosupport">Welcome to support.How can we serve you?</string>
    <string name="support">"Supporting "</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="twitter">Twitter</string>
    <string name="phoneoremail">Phone Number/Email</string>
    <string name="workerlogin">If you are a worker, enter here</string>
    <string name="registeration">Register a new account</string>
    <string name="accept">Accept</string>
    <string name="refuse">Refuse</string>
    <string name="termsandcondition">Terms and Conditions</string>
    <string name="enterphonenumber">Hello,please Enter your Email for Verification</string>
    <string name="dearcustomer">Dear Customer</string>
    <string name="truecode">The code has been successfully verified</string>
    <string name="done">done</string>
    <string name="okay">Ok</string>
    <string name="rateus">What is your Rate for the Application?</string>
    <string name="opinions">Your opinion and suggestions.</string>
    <string name="send">Send</string>
    <string name="later">Later</string>
    <string name="cancel">Cancel</string>
    <string name="verybad">Very Bad :(</string>
    <string name="notgood">Not Good :(</string>
    <string name="quiteok">Quite Ok</string>
    <string name="verygood">Very Good :)</string>
    <string name="excellent">Excellent !!!</string>
    <string name="servicetype">Service Type</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="descrption">Descrption</string>
    <string name="discountcode">Discount Code</string>
    <string name="vervydiscount">Verify</string>
    <string name="choosepayment">Choose Payment Way</string>
    <string name="cash">Cash</string>
    <string name="creditcard">Credit Card</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="acceptterms"><u>Accept Terms And Conditions.</u></string>
    <string name="worker">if you are a worker,click here !</string>
    <string name="enterphonenumberforlogin">Enter PhoneNumber for SignIn</string>
    <string name="fullname">Full Name</string>
    <string name="nationalnumber">National Number</string>
    <string name="nationalnumberregistration">Enter National Number </string>
    <string name="placescanwork">Areas you can work in?</string>
    <string name="attachdocument">Attach Documents</string>
    <string name="sendrequest">Send Request</string>
    <string name="visittime">Visit Time</string>
    <string name="requeststatus">Request Status</string>
    <string name="requestnumber">Request Num.</string>
    <string name="cancelrequest">Cancel Order</string>
    <string name="rateservice">Rate Service</string>
    <string name="pleaseenterphonenumber">Please Enter your Phone Number</string>
    <string name="seconds">Seconds</string>
    <string name="entercode">Please Enter the Code</string>
    <string name="invalidcodee">Code is wrong, Please try again.</string>
    <string name="currentlocation">Click here to Select your current Location</string>
    <string name="lessthan6letters">Password  Mustn\'t be less than 8 letters</string>
    <string name="entervalidemail">Enter Valid Email</string>
    <string name="enterurname">Enter Your First Name</string>
    <string name="enteraddress">Enter your address</string>
    <string name="successregisteration">Successfully Registered</string>
    <string name="successfulydetect">Your current location has been successfully identified</string>
    <string name="successfulyupdate">Successfully Updated</string>
    <string name="updatefailed">Update Failed</string>
    <string name="makeorder">Make Order</string>
    <string name="customername">Customer Name</string>
    <string name="requestdate">Request Date :</string>
    <string name="address">Address</string>
    <string name="workername">Worker Name :</string>
    <string name="location">Location</string>
    <string name="examinationfee">Visit fee</string>
    <string name="paymentway">Payment Way</string>
    <string name="previewing">Worker Previewing</string>
    <string name="costafterpreviewing">Cost After Previewing</string>
    <string name="descrptionmustbegreaer">Descrption Must be greater than 15 character !</string>
    <string name="choosetime">You must check the right time</string>
    <string name="youmustchecktheightdate">You must check the right date</string>
    <string name="choosethesource">Choose the source of the image</string>
    <string name="choosefromgallery">Chooce from Gallery</string>
    <string name="capturewzcamera">Capture with Camera</string>
    <string name="choose">Choose</string>
    <string name="cameraaccessdenied">Camera access denied</string>
    <string name="accesstomemoryusagedenied">Access to memory usage denied</string>
    <string name="noresults">There is no Data</string>
    <string name="no_orders">No Orders yet</string>
    <string name="verifythetechnicalidentity"><u>Verify the technical identity</u>.</string>
    <string name="pleasedeletetheworkercodeforsafety">Please scan the worker code for safety</string>
    <string name="previousrequest">Previous Orders</string>
    <string name="requestpage">Request Page</string>
    <string name="workernname">Worker Name</string>
    <string name="changepassword"><u>Do you want to change your password?</u></string>
    <string name="changepassworduser">Change Password</string>
    <string name="oldpassword">Old Password</string>
    <string name="newpassword">New Password</string>
    <string name="confirmnewpassword">Confirm New Password</string>
    <string name="confirm">Confirm</string>
    <string name="thereisanerrorinthedata">There is an error in the data</string>
    <string name="enterpassword">Enter password !</string>
    <string name="changepassworddone">Password successfully changed</string>
    <string name="logoutQuestion">Do you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="loginasworker">Sign in as a Worker</string>
    <string name="signinasworker">SignIn as a Worker</string>
    <string name="weekrepoert">Week Report</string>
    <string name="youhavetosignin">You must be logged in to be able to make an order</string>
    <string name="servicetypee">Service Type :</string>
    <string name="seetheweekssummary">See the week’s summary</string>
    <string name="seethedetailsofthelatestrequest">See the details of the latest Orders</string>
    <string name="active">Connect</string>
    <string name="inactive">Disconnect</string>
    <string name="workerchart">Worker Chart</string>
    <string name="oldpasswordisincorret">Old Password is incorrect</string>
    <string name="lat">latitude</string>
    <string name="longitude">longitude</string>
    <string name="canselationreason">What is the reason for the cancellation?</string>
    <string name="tryingapp">I was trying the app</string>
    <string name="Iwillasklater">I will ask later</string>
    <string name="thepriceishigh">The price is high</string>
    <string name="noonecontactedme">No one contacted me</string>
    <string name="theappointmentisfarIcantwait">The appointment is far, I can\'t wait</string>
    <string name="thetechniciandidnotsticktotheappointment">The technician did not stick to the appointment</string>
    <string name="Ididntliketheworker">I didn\'t like the worker</string>
    <string name="keeptherequest">Go to order</string>
    <string name="cancellingorder">Cancelling order</string>
    <string name="areyousureyouwanttocanceltheservice">Are you sure you want to cancel the service?</string>
    <string name="imageValid">Enter Required Picture</string>
    <string name="brithday">Brithday</string>
    <string name="choose_birthday">Choose Birthday</string>
    <string name="forgetpassword">Forget Password?</string>
    <string name="enteremail">Enter Your Email</string>
    <string name="sendconfirmmsg">Send your Code</string>
    <string name="resetthepassword">Reset the password</string>
    <string name="enterthecodesenttotheemail">Enter Your Reset Code</string>
    <string name="passwordmustbemorethan6characters">Please follow Guidelines for Strong Passwords</string>
    <string name="therequesthasbeensuccessfullycanceled">The request has been successfully canceled</string>
    <string name="newstatus">NEW ORDERS</string>
    <string name="cancelledorder">CANCELLED ORDERS</string>
    <string name="completedorder">COMPLETED ORDERS</string>
    <string name="rated">RATED ORDER</string>
    <string name="newpreview">NEW PREVIEW</string>
    <string name="cancelledpreview">CANCELLED PREVIEW</string>
    <string name="completedpreview">COMPLETED PREVIEW</string>
    <string name="rateserviceplease">Rate Service Please !</string>
    <string name="prettyapp">Pretty App !</string>
    <string name="writecomment">Please Write a comment</string>
    <string name="newrequest">New Request near by you!</string>
    <string name="guidelinesforstrongpasswords">Guidelines for Strong Passwords</string>
    <string name="uppercaseandlowercase">A mixture of both uppercase and lowercase letters.</string>
    <string name="lettersandnumbers">A mixture of letters and numbers.</string>
    <string name="specialcharacter">Inclusion of at least one special character, e.g., !  @ # ? ].</string>
    <string name="character">At least 8 characters—the more characters, the better.</string>
    <string name="sales">Sales</string>
    <string name="home">Home</string>
    <string name="more">More</string>
</resources>