<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/offersFragment"
        android:icon="@drawable/home"
        android:title="@string/mainpage" />
    <item
        android:id="@+id/signinfragmentt"
        android:icon="@drawable/user_profile"
        android:title="@string/profile" />
    <item
        android:id="@+id/salesFragment"
        android:icon="@drawable/discount"
        android:title="@string/offers" />
    <item
        android:id="@+id/requestsFragment"
        android:icon="@drawable/execution"
        android:title="@string/requests" />
    <item
        android:id="@+id/supportFragment"
        android:icon="@drawable/support"
        android:title="@string/helpandsupport" />
    <item
        android:id="@+id/aboutAppFragment"
        android:icon="@drawable/group"
        android:title="@string/aboutapp" />

    <item
        android:id="@+id/workerChartFragment"
        android:icon="@drawable/ic_insert_chart_black_24dp"
        android:iconTint="@color/whiteColor"
        android:title="@string/workerchart" />
    <item
        android:id="@+id/settingFragment"
        android:icon="@drawable/settings"
        android:iconTint="@color/whiteColor"
        android:title="@string/setting" />

    <item
        android:id="@+id/out"
        android:enabled="false"
        android:title="" />

    <item
        android:id="@+id/out2"
        android:enabled="false"
        android:title="" />
    <item
        android:id="@+id/out3"
        android:enabled="false"
        android:title="" />
</menu>