<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/small_margin"
    android:layout_height="match_parent"
    android:background="@drawable/red_dialog_bk"
    android:orientation="vertical">

    <TextView
        android:textSize="@dimen/medum_text_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/rateus"
        android:textColor="@color/whiteColor" />

    <RatingBar
        android:id="@+id/rateappdialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/medium_margin"
        android:layout_marginBottom="@dimen/small_margin" />

    <TextView
        android:textSize="@dimen/small_text_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/opinions"
        android:layout_marginBottom="@dimen/very_small_margin"
        android:textColor="@color/whiteColor" />
    <EditText
        android:layout_gravity="center"
        android:gravity="left"
        android:id="@+id/rateAppComment"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/very_small_margin"
        android:background="@color/whiteColor"
        android:hint="@string/prettyapp"
        android:padding="@dimen/very_small_margin"
        android:paddingStart="@dimen/very_small_margin"
        android:textColor="@color/basicColor"
        android:textColorHint="@color/basicColor" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sendAppComment"
            app:cornerRadius="@dimen/small_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/medium_margin"
            android:backgroundTint="@color/whiteColor"
            android:text="@string/send"
            android:textAllCaps="false"
            android:textColor="@color/basicColor" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/laterAppComment"
            android:layout_width="wrap_content"
            app:cornerRadius="@dimen/small_margin"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/medium_margin"
            android:backgroundTint="@color/whiteColor"
            android:text="@string/later"
            android:textAllCaps="false"
            android:textColor="@color/basicColor" />
    </RelativeLayout>
</LinearLayout>