<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:layout_marginTop="@dimen/very_small_margin"
            android:layout_marginBottom="@dimen/medium_margin"
            android:background="@drawable/edittext_border_password_dialog"
            android:orientation="vertical"
            android:padding="@dimen/medium_margin">

            <TextView
                android:layout_width="@dimen/_230sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/small_margin"
                android:gravity="center"
                android:text="@string/guidelinesforstrongpasswords"
                android:textColor="@color/whiteColor"
                android:textSize="@dimen/medum_text_size"
                android:textStyle="bold" />

            <LinearLayout
                android:padding="@dimen/very_small_margin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:gravity="start"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_margin"
                    android:drawableStart="@drawable/ic_checkmark"
                    android:drawablePadding="@dimen/very_small_margin"
                    android:text="@string/character"
                    android:textColor="@color/whiteColor" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_margin"
                    android:drawableStart="@drawable/ic_checkmark"
                    android:drawablePadding="@dimen/very_small_margin"
                    android:text="@string/uppercaseandlowercase"
                    android:textColor="@color/whiteColor" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_margin"
                    android:drawableStart="@drawable/ic_checkmark"
                    android:drawablePadding="@dimen/very_small_margin"
                    android:text="@string/lettersandnumbers"
                    android:textColor="@color/whiteColor" />

                <TextView
                    android:layout_marginBottom="@dimen/medium_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_margin"
                    android:drawableStart="@drawable/ic_checkmark"
                    android:drawablePadding="@dimen/very_small_margin"
                    android:text="@string/specialcharacter"
                    android:textColor="@color/whiteColor" />

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/doneInformationId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:backgroundTint="@color/whiteColor"
                android:textColor="@color/basicColor"
                android:background="@drawable/border_white_rounded_more"
                app:cornerRadius="@dimen/_12sdp"
                android:layout_marginBottom="@dimen/medium_margin"
                android:text="@string/confirm"
                 />

        </LinearLayout>
    </ScrollView>

</layout>
