<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bk"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/very_small_margin"
        android:text="@string/newrequest"
        android:textColor="@color/black"
        android:textSize="@dimen/medum_text_size" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/small_margin"
        android:layout_marginTop="@dimen/very_small_margin">

        <Button
            android:id="@+id/acceptdialogId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_margin"
            android:layout_marginEnd="@dimen/medium_margin"
            android:backgroundTint="@color/green"
            android:text="@string/accept" />

        <Button
            android:id="@+id/refuseddialogId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_margin"
            android:layout_marginEnd="@dimen/medium_margin"
            android:backgroundTint="@color/errorcolor"
            android:text="@string/refuse" />
    </LinearLayout>
</LinearLayout>