<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/dialog_bk"
        android:backgroundTint="@color/whiteColor"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="22dp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="22dp"
            android:fontFamily="@font/urw_geometric_arabic_regular"
            android:gravity="center"
            android:text="@string/enteremail"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/confirm_email_forget"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/edittext_agent_preview"
            android:gravity="center"
            android:hint="@string/email"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="12sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:fontFamily="@font/urw_geometric_arabic_regular"
            android:text="@string/sendconfirmmsg"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            app:cornerRadius="@dimen/_5sdp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginRight="16dp"
            android:backgroundTint="@color/basicColor"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="#fff"
            app:cornerRadius="@dimen/_5sdp" />



    </LinearLayout>
</layout>
